@@ -98,6 +98,23 @@ class TimeseriesLoader(PresentationObjectLoader):
 
         fig = plt.figure(figsize=(6, 4), dpi=150)
         ax = fig.add_subplot(1, 1, 1)
+
+        # plot (constant) reference value if defined
+        ref = kwargs.get("reference", None)
+        if isinstance(ref, dict):
+            ref_value = ref.get("value", None)
+            if ref_value:
+                ref_label = ref.get("label", "Reference value")
+                ax.axhline(
+                    y=ref_value,
+                    xmin=0.05,
+                    xmax=0.95,
+                    color="r",
+                    linestyle=":",
+                    label=ref_label,
+                )
+                ax.legend()
+
         ax.plot(coord_points, self.cube.data, color="k")
         plt.setp(ax.spines.values(), color="grey")
         ax.grid()
